--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Pagina Pessoal de Eric</title>
+    </head>
+    <style>
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: lightskyblue;
+        color: blue;
+        line-height:1.6 ;
+        padding: 20px;
+    }
+    header{
+    background-color: royalblue;
+    color:lightskyblue;
+    padding: 10px 0;
+    text-align:center;
+    border-style: outset;
+    border-color: blue;
+    border-width: thick;
+    border-radius: 15px;
+    }
+    header h1{
+    margin-bottom:10px;
+    }
+    nav u1{
+        list-style:none;
+    }
+    nav ul li{
+        display:inline;
+        margin: 0 10px;
+    }
+    nav ul li a{
+        color:lightskyblue;
+        text-decoration: none;
+    }
+    section{
+      margin:20px 0;  
+    }
+    section#sobre,
+    section#projetos,
+    section#contato{
+        background-color: powderblue;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px blue (0,0,0,0.1);
+    }
+    footer{
+        text-align: right;
+        margin-top: 20px;
+    }
+    </style>
+<body>
+    <header>
+        <h1> Eric Peretti</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre mim</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="sobre">
+        <h2> Sobre Mim</h2>
+        <p> Gosto de Lutar Jiu-Jitsu,Jogar Futebol e Sinuca </p>
+    </section>
+    <section id="projetos">
+        <h2>Projetos </h2>
+        <ul>
+        <li>Projeto 1:<a href="#">Descrição do Projeto 1</a></li>
+        <li>Projeto 2:<a href="#">Descrição do Projeto 2</a></li>
+        <li>Projeto 3:<a href="#">Descrição do Projeto 3</a></li>
+        <li>Projeto 4:<a href="#">Descrição do Projeto 4</a></li>
+        <li>Projeto 5:<a href="#">Descrição do Projeto 5</a></li>
+        </ul>
+    </section>
+    <section id="contato">
+        <h2> Contato</h2>
+        <p> Entre em Contato Comigo Via <a href="Mailto:eric_peretti@estudante.sesisenai.org.br">eric_peretti@estudante.sesisenai.org.br</a> </p>
+    </section>
+    <footer>
+    <p>&copy; @2025- EricPeretti0508</p>
+    </footer>
+</body>
+</html>
