--- a/index.html
+++ b/index.html
@@ -2,60 +2,9 @@
 <html>
     <head>
         <title> Pagina Pessoal de Eric</title>
+        <link rel="stylesheet" href="static/style.css">
     </head>
-    <style>
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    body{
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: lightskyblue;
-        color: blue;
-        line-height:1.6 ;
-        padding: 20px;
-    }
-    header{
-    background-color: royalblue;
-    color:lightskyblue;
-    padding: 10px 0;
-    text-align:center;
-    border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-    }
-    header h1{
-    margin-bottom:10px;
-    }
-    nav u1{
-        list-style:none;
-    }
-    nav ul li{
-        display:inline;
-        margin: 0 10px;
-    }
-    nav ul li a{
-        color:lightskyblue;
-        text-decoration: none;
-    }
-    section{
-      margin:20px 0;  
-    }
-    section#sobre,
-    section#projetos,
-    section#contato{
-        background-color: powderblue;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px blue (0,0,0,0.1);
-    }
-    footer{
-        text-align: right;
-        margin-top: 20px;
-    }
-    </style>
+    
 <body>
     <header>
         <h1> Eric Peretti</h1>
@@ -69,12 +18,12 @@
     </header>
     <section id="sobre">
         <h2> Sobre Mim</h2>
-        <p> Gosto de Lutar Jiu-Jitsu,Jogar Futebol e Sinuca </p>
+        <p> Gosto de Jogar Futebol e Sinuca </p>
     </section>
     <section id="projetos">
         <h2>Projetos </h2>
         <ul>
-        <li>Projeto 1:<a href="#">Descrição do Projeto 1</a></li>
+        <li>Projeto 1:<a href="/projeto1.html">Projeto Tabelas com Imagem</a></li>
         <li>Projeto 2:<a href="#">Descrição do Projeto 2</a></li>
         <li>Projeto 3:<a href="#">Descrição do Projeto 3</a></li>
         <li>Projeto 4:<a href="#">Descrição do Projeto 4</a></li>
