--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section id="projetos">
         <h2>Projetos </h2>
         <ul>
-        <li>Projeto 1:<a href="/projeto1">Projeto Tabelas com Imagem</a></li>
-        <li>Projeto 2:<a href="#">Descrição do Projeto 2</a></li>
+        <li>Projeto 1:<a href="https://ericperetti2011.github.io/senai/projeto1.html">Projeto Tabelas com Imagem</a></li>
+        <li>Projeto 2:<a href="/projeto2.html"></a></li>
         <li>Projeto 3:<a href="#">Descrição do Projeto 3</a></li>
         <li>Projeto 4:<a href="#">Descrição do Projeto 4</a></li>
         <li>Projeto 5:<a href="#">Descrição do Projeto 5</a></li>
