--- a/projeto1.html
+++ b/projeto1.html
@@ -47,7 +47,7 @@ height:200px
 </head>
 <body>
     <a href="/index.html">Página Principal</a>
-<h1>ERIC PERETTI</h1>
+<h1>Projeto Tabelas com Imagem</h1>
 <P>LISTA DE CADASTRO</P>
 <table>
 <TR>
