--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
         <li>Projeto 1:<a href="/projeto1.html">Projeto Tabelas com Imagem</a></li>
         <li>Projeto 2:<a href="/projeto2.html">Projeto Historia Sinuca</a></li>
-        <li>Projeto 3:<a href="#">Descrição do Projeto 3</a></li>
+        <li>Projeto 3:<a href="/formulários.html">Formulários</a></li>
         <li>Projeto 4:<a href="#">Descrição do Projeto 4</a></li>
         <li>Projeto 5:<a href="#">Descrição do Projeto 5</a></li>
         </ul>
