--- a/projeto1.html
+++ b/projeto1.html
@@ -4,44 +4,47 @@
 <title>Página Pessoal de Eric com Cadastro</title>
 <style>
 table{
-border:8px dashed SaddleBrown;
+border:8px dashed blue;
 padding:9px;
 }
 th{
-background-color: SandyBrown;
-color:sienna;
+background-color: royalblue;
+color:blue;
 padding:6px;
-border:2px solid SaddleBrown;
+border:2px solid blue;
 }
 tr{
-background-color:SandyBrown;
+background-color:skyblue;
 text-align:center;
 }
 td{
-border:2px solid SaddleBrown;
-color:SaddleBrown;
-background-color:NavajoWhite;
+border:2px solid blue;
+color:blue;
+background-color:skyblue;
 }
 H1{
-background-color:SandyBrown;
-border:10px outset SaddleBrown;
-color:SaddleBrown;
+background-color:royalblue;
+border:10px outset blue;
+color:blue;
 text-align:center;
 font:50px serif;
 }
 P{
 font-family:Arial, Helvetica, sans-serif;
-color:SaddleBrown;
+color:blue;
 font-weight:bold;
 font-size:30px;
 text-align:center;
 }
 body{
-background-color:chocolate
+background-color:skyblue;
 }
 img{
 width:300px;
 height:200px
+}
+a{
+    background-color: royalblue;
 }
 </style>
 </head>
