--- a/projeto2.html
+++ b/projeto2.html
@@ -8,8 +8,17 @@
     <a href="/index.html">Página Principal</a>
 <h1>Projeto Historia Sinuca</h1>
 <P>A sinuca, popularmente chamada de snooker em algumas regiões, surgiu na Grã-Bretanha no século XIX, em 1875, como uma variação dos jogos de bilhar. O coronel Neville Chamberlain, um oficial do exército britânico, é frequentemente creditado por codificar as regras do jogo durante uma estação chuvosa na Índia, especificamente na cidade de Jabalpur. A partir de 1880, a Inglaterra passou a ser considerada a inventora dessa nova modalidade esportiva. </P>
+<tr>
+<P>Os dois melhores jogadores de sinuca da história do Brasil:</P>
 <table>
-
+<tr>
+<td>Baianinho de Mauá</td>
+<td> <img src=https://s2-ge.glbimg.com/Vc9j7FQZ0e8AEXwDzjJkNhkbBoQ=/0x0:5071x3356/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2023/W/x/hmFs8CSk2gLrRlhuEcIQ/rib7472.jpg></td>
+</tr>
+<tr>
+<td>Rui Chapéu</td>
+<td> <img src=https://imgsapp.em.com.br/app/noticia_127983242361/2020/02/29/1125224/20200229145706891178o.jpg></td>
+</tr>
 </table>
 </body>
 </html>
