--- a/formulários.html
+++ b/formulários.html
@@ -3,12 +3,32 @@
 <head>
 <meta charset="UTF-8"> 
 <meta name="viewport" content="width=device-width,initial-scales=1.0">
+<link rel="stylesheet" href="/styleform.css">
+
 <title>Formulário</title>
 </head>
 <body>
       <h1>Meu Primeiro Formulário</h1>
 
+<form action="POST">
+      <label for="">Nome:</label>
+      <input type="text">
 
+      <label for="">Idade:</label>
+      <input type="number">
+
+      <label for="">Cor Preferida:</label>
+      <input type="color">
+
+      <label for="">Email:</label>
+      <input type="email">
+
+      <label for="">Senha:</label>
+      <input type="password">
+
+      <label for="">Data de Nascimento:</label>
+      <input type="date">
+</form>
 
 
 
