--- a/formulários.html
+++ b/formulários.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"> 
 <meta name="viewport" content="width=device-width,initial-scales=1.0">
-<link rel="stylesheet" href="/styleform.css">
+<link rel="stylesheet" href="static/styleform.css">
 
 <title>Formulário</title>
 </head>
