--- a/formulários.html
+++ b/formulários.html
@@ -8,6 +8,7 @@
 <title>Formulário</title>
 </head>
 <body>
+      <a href="/index.html">Página Principal</a>
       <h1>Meu Primeiro Formulário</h1>
 
 <form action="POST">
@@ -28,6 +29,7 @@
 
       <label for="">Data de Nascimento:</label>
       <input type="date">
+      <input type="submit" value="cadastrar">
 </form>
 
 
