--- a/projeto1.html
+++ b/projeto1.html
@@ -50,7 +50,7 @@ a{
 </head>
 <body>
     <a href="/index.html">Página Principal</a>
-<h1>Projeto Tabelas com Imagem</h1>
+<h1>Tabelas de Nomes</h1>
 <P>LISTA DE CADASTRO</P>
 <table>
 <TR>
@@ -80,39 +80,7 @@ a{
 </table>
 </tr>
 </table>
-<p>LISTA DE ESTADOS DO BRASIL E SUAS BANDEIRAS...</p>
-<table>
-<tr>
-<th>ESTADO</th>
-<th>BANDEIRA</th>
-</tr>
-<tr>
-<td>Santa Catarina</td>
-<td> <img src=https://i.pinimg.com/736x/eb/31/e5/eb31e5f731caad04c3120e32afdad1a7.jpg></td>
-<td><a href="https://www.sc.gov.br/">LINK SC</a></td>
-</tr>
-<tr>
-<td>Paraná</td>
-<td> <img src="https://i.pinimg.com/736x/fe/c8/a6/fec8a6b884073cd397c2f271eb354b8f.jpg"></td>
-<td><a href="https://www.parana.pr.gov.br/">LINK PR</a></td>
-</tr>
-<tr>
-<td>Rio Grande do Sul</td>
-<td> <img src="https://i.pinimg.com/736x/99/7d/25/997d25eeb3c2d30b137816c4c236acb9.jpg"></td>
-<td><a href="https://www.rs.gov.br/">LINK RS</a></td>
-</tr>
-<tr>
-<td>Rio de Janeiro</td>
-<td> <img src="https://i.pinimg.com/736x/9d/c1/c5/9dc1c5f713b15b1e1482cba1bf4845f8.jpg"></td>
-<td><a href="https://www.rj.gov.br/">LINK RJ</a></td>
-</tr>
-<tr>
-<td>São Paulo</td>
-<td> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdNRxejNL5WoU4xp9qwLBDOdpzYpUzY4lQ1Q&s"></td>
-<td><a href="https://www.sp.gov.br/">LINK SP</a></td>
-</tr>
 
-</table>
 </body>
 </html>
 </body>
