--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Projeto 1:<a href="/projeto1.html">Tabelas de Nomes</a></li>
         <li>Projeto 2:<a href="/projeto2.html">Historia Sinuca</a></li>
         <li>Projeto 3:<a href="/projeto3.html">Tabela de Imagens</a></li>
-        <li>Projeto 4:<a href="/projeto4.html">Honda Civic 2010</a></li>
+        <li>Projeto 4:<a href="/projeto4.html">Honda Civic </a></li>
         <li>Projeto 5:<a href="/formulários.html">Formulários</a></li>
         </ul>
     </section>
