--- a/projeto4.html
+++ b/projeto4.html
@@ -1,80 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <a href="/index.html">Página Principal</a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Honda Civic</title>
+    <title>Honda Civic SI</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        .container { max-width: 800px; margin: auto; padding: 20px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            background-color: lightskyblue;
+        }
+        .container { 
+            max-width: 800px; 
+            margin: auto; 
+            padding: 20px; 
+        }
         img {
-             width: 100%; max-width: 600px; 
-border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-padding:9px,
-            }
-        p{
-color:blue;
-font-weight:bold;
-font-size:15px;
-text-align:center;
-padding:6px;
-border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-}
-    body{
-background-color:lightskyblue;
-}
-H1{
-background-color:royalblue;
-border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-color:blue;
-text-align:center;
-font:50px serif;
-}
-H2{
-border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-color:blue;
-text-align:center;
-font:50px serif;
-}
-header{
-    color:lightskyblue;
-    padding: 10px 0;
-    text-align:center;
-    border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px;
-    }
-    li{
-    color:blue;
-font-weight:bold;
-font-size:15px;
-text-align:center;
-padding:6px;
-border-style: outset;
-    border-color: blue;
-    border-width: thick;
-    border-radius: 15px; 
-    }
+            width: 100%; 
+            max-width: 600px; 
+            border-style: outset;
+            border-color: blue;
+            border-width: thick;
+            border-radius: 15px;
+            padding: 9px;
+        }
+        p, li {
+            color: blue;
+            font-weight: bold;
+            font-size: 15px;
+            text-align: center;
+            padding: 6px;
+            border-style: outset;
+            border-color: blue;
+            border-width: thick;
+            border-radius: 15px;
+        }
+        h1{
+            background-color: royalblue;
+            border-style: outset;
+            border-color: blue;
+            border-width: thick;
+            border-radius: 15px;
+            color: blue;
+            text-align: center;
+            font: 50px serif;
+        }
+        h2 {
+            border-style: outset;
+            border-color: blue;
+            border-width: thick;
+            border-radius: 15px;
+            color: blue;
+            text-align: center;
+            font: 50px serif;
+        }
+        header {
+            color: lightskyblue;
+            padding: 10px 0;
+            text-align: center;
+            border-style: outset;
+            border-color: blue;
+            border-width: thick;
+            border-radius: 15px;
+        }
     </style>
 </head>
 <body>
-    <table></table>
+    <a href="/index.html">Página Principal</a>
     <div class="container">
-        <h1>Honda Civic</h1>
+        <h1>Honda Civic SI</h1>
         <img src="https://file.kelleybluebookimages.com/kbb/base/house/2010/2010-Honda-Civic-FrontSide_HOCIVSED101_505x375.jpg?downsize=382:*" alt="Honda Civic">
         <p>O Honda Civic é um dos carros mais icônicos da Honda, conhecido por seu design moderno, eficiência e desempenho confiável.</p>
         <h2>Especificações</h2>
@@ -85,6 +79,5 @@ border-style: outset;
             <li>Transmissão: Automática CVT ou Manual</li>
         </ul>
     </div>
-    </table>
 </body>
 </html>
